# geoWordle

./: .project  CMakeLists.txt  LICENSE  README.md  _config.yml  index.md  test.py
src/: CMakeLists.txt  geoWordle.cpp
src/cgal_kernel/: colored_bbox_2.cpp  colored_bbox_2.h  colored_box_with_colored_points.cpp  colored_box_with_colored_points.h  colored_point_2.cpp  colored_point_2.h  kernel_L1.cpp  kernel_L1.h
src/gpl_data_structure/: graph.cpp  graph.h  jsonM.cpp  jsonM.h
src/include/: geoWordle.h  greedy_solver.h  greedy_solver_area.h  greedy_solver_ratio.h  miscellaneous.h  problem.h  solver.h  wmis_solver.h
src/solvers/: solver.cpp
src/solvers/exact-solvers/: wmis_solver.cpp
src/solvers/greedy-solvers/: greedy_solver.cpp  greedy_solver_area.cpp  greedy_solver_ratio.cpp
src/tools/: miscellaneous.cpp  miscellaneous_draw.cpp  miscellaneous_draw.h  problem.cpp
us_crops/: crops_all.txt  crops_m.txt  crops_states.txt
